<resources>
    <string name="app_name">Yumdev</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="enter_the_title">Enter the Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe">Recipe</string>
    <string name="save">save</string>
    <string name="title_activity_create">activity_create</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="ingredient_list">Ingredient List:</string>
    <string name="instructions">Instructions</string>
    <string name="empty">Empty</string>
    <string name="no_steps">No Steps</string>
</resources>
