<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipeInstructions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/recipeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_list"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recipeIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recipeSteps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_steps"
        android:textSize="20sp" />

</LinearLayout>